[gd_scene load_steps=5 format=2]

[ext_resource path="res://Art/colored.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bingus.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 459, 68, 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Bingus_Enemy" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="BingusSprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = SubResource( 1 )

[node name="BingusMove" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ReverseCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BingusCollission" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="BingusDown" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 25 )
collision_mask = 2
collide_with_areas = true

[node name="CornerCheckLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 9, 25 )
collision_mask = 2
collide_with_areas = true

[node name="CornerCheckRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -9, 25 )
collision_mask = 2
collide_with_areas = true

[connection signal="timeout" from="BingusMove" to="." method="_on_BingusMove_timeout"]
